--- a/public/index.html
+++ b/public/index.html
@@ -18,35 +18,39 @@
           <button class="tab-btn" onclick="switchTab('register')">สมัครสมาชิก</button>
         </div>
 
-        <!-- Login Form -->
+        <!-- Login Tab -->
         <div id="loginTab" class="tab-content active">
           <form onsubmit="handleLogin(event)">
             <div class="form-group">
-              <label for="loginCitizenId">เลขประจำตัว (5 หลัก):</label>
-              <input type="text" id="loginCitizenId" maxlength="5" pattern="[0-9]{5}" placeholder="00000" required>
+              <label for="loginCitizenId">เลขประจำตัวประชาชน (5 หลัก)</label>
+              <input type="text" id="loginCitizenId" required maxlength="5">
+              <small>กรุณากรอกเลขประจำตัวประชาชน 5 หลัก</small>
             </div>
+
             <div class="form-group">
-              <label for="loginPassword">รหัสผ่าน:</label>
+              <label for="loginPassword">รหัสผ่าน</label>
               <input type="password" id="loginPassword" required>
             </div>
+
             <button type="submit" class="btn-submit">เข้าสู่ระบบ</button>
             <div id="loginError" class="error-message"></div>
           </form>
         </div>
 
-        <!-- Register Form -->
+        <!-- Register Tab -->
         <div id="registerTab" class="tab-content">
           <form onsubmit="handleRegister(event)">
             <div class="form-group">
-              <label for="regCitizenId">เลขประจำตัว (5 หลัก):</label>
-              <input type="text" id="regCitizenId" maxlength="5" pattern="[0-9]{5}" placeholder="00000" required>
-              <small>กรุณาใส่ตัวเลข 5 หลัก</small>
+              <label for="regCitizenId">เลขประจำตัวประชาชน (5 หลัก)</label>
+              <input type="text" id="regCitizenId" required maxlength="5">
+              <small>กรุณากรอกเลขประจำตัวประชาชน 5 หลัก</small>
             </div>
+
             <div class="form-group">
-              <label for="regPassword">สร้างรหัสผ่าน:</label>
-              <input type="password" id="regPassword" required minlength="6">
-              <small>รหัสผ่านต้องมีความยาวอย่างน้อย 6 ตัวอักษร</small>
+              <label for="regPassword">รหัสผ่าน</label>
+              <input type="password" id="regPassword" required>
             </div>
+
             <button type="submit" class="btn-submit">สมัครสมาชิก</button>
             <div id="registerError" class="error-message"></div>
             <div id="registerSuccess" class="success-message"></div>
@@ -59,8 +63,8 @@
     <div id="votingPage" class="page">
       <div class="voting-container">
         <div class="citizen-id-box">
-          <p>เลขประจำตัวของคุณ:</p>
-          <h2 id="displayCitizenId">-----</h2>
+          <p>เลขประจำตัวประชาชน:</p>
+          <h2 id="displayCitizenId"></h2>
         </div>
 
         <h1>เลือกพรรคการเมืองที่คุณต้องการสนับสนุน</h1>
@@ -76,7 +80,7 @@
     <!-- Results Page -->
     <div id="resultsPage" class="page">
       <div class="results-container">
-        <h1>📊 ผลการลงคะแนนแบบสดใจ 2569</h1>
+        <h1>📊 ผลการลงคะแนนแบบสด</h1>
         
         <div id="resultsChart" class="results-chart">
           <!-- Results will be loaded here -->
